# y-holochain

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: test.yml
crates/hc_zome_yjs_coordinator/: Cargo.toml
crates/hc_zome_yjs_coordinator/src/: all_documents.rs  document.rs  document_to_agents.rs  document_to_statevectors.rs  lib.rs  statevector.rs  utils.rs
crates/hc_zome_yjs_integrity/: Cargo.toml
crates/hc_zome_yjs_integrity/src/: document.rs  document_to_agents.rs  document_to_statevectors.rs  lib.rs  statevector.rs
src/: index.ts  types.ts
tests/: package-lock.json  package.json
tests/demo/: Cargo.toml  README.md  package-lock.json  package.json
tests/demo/dnas/demo/workdir/: dna.yaml
tests/demo/dnas/demo/zomes/coordinator/yjs/: Cargo.toml
tests/demo/dnas/demo/zomes/coordinator/yjs/src/: lib.rs
tests/demo/dnas/demo/zomes/integrity/yjs_integrity/: Cargo.toml
tests/demo/dnas/demo/zomes/integrity/yjs_integrity/src/: lib.rs
tests/demo/ui/: package.json
tests/demo/ui/src/: App.vue  main.ts  style.css
tests/demo/ui/src/demo/yjs/: AgentsForDocument.vue  AllDocuments.vue  CreateDocument.vue  DocumentDetail.vue  DocumentListItem.vue  QuillDocumentDetail.vue  TiptapDocumentDetail.vue  types.ts
tests/demo/workdir/: happ.yaml  web-happ.yaml
tests/src/: provider.test.ts
