[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.1"
hdk = "=0.2.1"
serde = "1"

[workspace.dependencies.hc_zome_yjs_coordinator]
path = "../../crates/hc_zome_yjs_coordinator"

[workspace.dependencies.hc_zome_yjs_integrity]
path = "../../crates/hc_zome_yjs_integrity"
